# metamorphic_testing

./: .bandit.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .prospector.yaml  CONTRIBUTIONS.md  LICENSE  README.md  pyproject.toml
WebApp/: app.py
WebApp/static/: style.css
WebApp/templates/: index.html
audio_examples/speech2text/: scratch_script.py
examples/acoustic_scene_classifier/: test_accoustic_scene_classifier.py
examples/acoustic_scene_classifier/models/: aec_core.py  aec_inference.py
examples/audio/: test_accoustic_scene_classifier.py  test_speech2text.py
examples/audio/audio_visualizer/: __init__.py  (+2 more)
examples/facial_keypoints/: keypoint_detection.py  test_keypoints.py
examples/house_pricing/: house_pricing.py  test_house_pricing.py
examples/image_classifier/: classifier.py  conftest.py  test_imageclassifier.py
examples/shortest_path/: test_path.py
examples/simple/: test_add.py  test_avg.py
examples/speech_recognition/: test_speech2text.py
examples/trigonometry/: conftest.py  test_cos.py  test_faulty_sin.py  test_sin.py
metamorphic_test/: __init__.py  decorator.py  generator.py  helper.py  logger.py  metamorphic.py  prioritized_transform.py  rel.py  relation.py  relations.py  suite.py  transform.py  transformation.py
metamorphic_test/generators/: __init__.py  randfloat.py  randint.py
metamorphic_test/relations/: __init__.py  approx_equal.py  approximately.py  equal.py  equality.py  float_equal.py  greater_than.py  less_than.py  or_.py  simple.py  swapped.py
metamorphic_test/report/: execution_report.py  html_generator.py  pytest_plugin.py  report_generator.py  string_generator.py
metamorphic_test/strategies/: __init__.py  floats_without_weird.py  inner.py
metamorphic_test/transformations/: __init__.py  negate.py  shift.py
metamorphic_test/transforms/: __init__.py  identity.py
mt-package/: pyproject.toml
mt-package/tests/: test_mt_package.py
mt_project/: mt_function.py  mt_helper.py  mt_relation.py  mt_seed.py  mt_transformer.py  sine.py
scripts/: cov.py  install_hook.py  lint.py  run_tests.py  run_web_app.py
tests/: conftest.py  test_add.py  test_avg.py  test_cos.py  test_decorator.py  test_execution_report.py  test_faulty_sin.py  test_helper.py  test_house_pricing.py  test_metamorphic.py  test_mt_package.py  test_sin.py  test_sin_mix.py  test_speech_recognition.py  test_suite.py
tests/house_pricing/: test_house_pricing.py
web_app/: app.py
web_app/static/: style.css
web_app/templates/: index.html
(+15 files in other folders)
