[tool.poetry]
name = "metamorphic_test"
version = "0.1.3"
description = ""
authors = ["Python Practicum TUM 2022"]

[tool.poetry.scripts]
cov = "scripts.cov:html_coverage"
install-hook = "scripts.install_hook:install_hook"
lint = "prospector.run:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hypothesis = "^6.49.1"
pytest = "^7.1.2"
wrapt = "^1.14.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pytest-cov = "^3.0.0"
prospector = {extras = ["with_mypy", "with_bandit"], version = "^1.7.7"}
librosa = "^0.9.2"
torch = "^1.12.0"
torchaudio = "^0.12.0"
torchvision = "^0.13.0"
omegaconf = "^2.2.2"
audiomentations = "^0.25.1"
SoundFile = "^0.10.3"
pyloudnorm = "^0.1.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
pandas-stubs = "^1.4.3"
sklearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
